# vmm-reference

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  coverage_config_x86_64.json  main.rs
.buildkite/: build_resources.py  build_resources.sh  custom-pipeline.yml  custom-tests.json  deps-pipeline.yml
.buildkite/hooks/: post-checkout
.github/: dependabot.yml
docs/: DESIGN.md  getting-started.md
resources/: make_test_resources.sh
resources/disk/: make_rootfs.sh
resources/kernel/: busybox_1_26_static_config  configs.sh  make_busybox.sh  make_kernel.sh  make_kernel_busybox_image.sh  make_kernel_image.sh  microvm-kernel-initramfs-hello-x86_64.config
src/: lib.rs  main.rs
src/api/: Cargo.toml
src/api/src/: lib.rs
src/arch/: Cargo.toml
src/arch/src/: lib.rs
src/cli/: Cargo.toml
src/cli/src/: lib.rs
src/devices/: Cargo.toml
src/devices/src/: lib.rs
src/devices/src/legacy/: console.rs  mod.rs  pipe.rs  rtc.rs  serial.rs
src/devices/src/virtio/: device.rs  env.rs  mod.rs
src/devices/src/virtio/block/: device.rs  handler.rs  inorder_handler.rs  mod.rs  queue_handler.rs  request.rs  simple_handler.rs
src/devices/src/virtio/console/: device.rs  inorder_handler.rs  mod.rs  queue_handler.rs
src/devices/src/virtio/net/: device.rs  handler.rs  mod.rs  queue_handler.rs  simple_handler.rs  tap.rs
src/devices/src/virtio/vsock/: device.rs  inorder_handler.rs  mod.rs  packet.rs  queue_handler.rs
src/devices/src/virtio/vsock/csm/: connection.rs
src/devices/src/virtio/vsock/unix/: muxer.rs
src/logger/: mod.rs
src/utils/: Cargo.toml
src/utils/src/: lib.rs  resource_download.rs
src/vm-fdt/: Cargo.toml
src/vm-fdt/src/: lib.rs
src/vm-vcpu/: Cargo.toml
src/vm-vcpu-ref/: Cargo.toml  coverage_config_x86_64.json
src/vm-vcpu-ref/src/: lib.rs
src/vm-vcpu-ref/src/aarch64/: interrupts.rs  mod.rs
src/vm-vcpu-ref/src/aarch64/regs/: icc.rs  mod.rs
src/vm-vcpu-ref/src/x86_64/: cpuid.rs  gdt.rs  interrupts.rs  mod.rs  mpspec.rs  mptable.rs  msrs.rs
src/vm-vcpu/src/: lib.rs  vm.rs
src/vm-vcpu/src/vcpu/: cpuid.rs  gdt.rs  interrupts.rs  mod.rs  mptable.rs  msr_index.rs  msrs.rs  regs.rs
src/vmm/: Cargo.toml
src/vmm/src/: boot.rs  config.rs  console.rs  devices.rs  irq_allocator.rs  lib.rs  pipe.rs  serial.rs  vm.rs
src/vmm/src/config/: arg_parser.rs  builder.rs  mod.rs
src/vmm/src/device/: mod.rs  rtc.rs
src/vmm/src/vcpu/: cpuid.rs  gdt.rs  interrupts.rs  mod.rs  mpspec.rs  mptable.rs  msr_index.rs
src/vmm/tests/: integration_tests.rs
src/vmm/tests/test_utils/: mod.rs
tests/: test_build_deps.py  test_run_reference_vmm.py
tests/tools/: s3_download.py  utils.py
tests/tools/s3/: resource_manifest.json  utils.py
