[package]
name = "vmm-reference"
version = "0.1.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
edition = "2018"
license = "Apache-2.0 OR BSD-3-Clause"

[dependencies]
vmm = { path = "src/vmm" }
api = { path = "src/api" }

[workspace]

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
