[package]
name = "devices"
version = "0.1.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
edition = "2018"
license = "Apache-2.0 OR BSD-3-Clause"

[dependencies]
event-manager = { version = "0.3.0", features = ["remote_endpoint"] }
kvm-ioctls = "0.13.0"
libc = "0.2.76"
linux-loader = "0.8.1"
log = "0.4.6"
vm-memory = "0.10.0"
vm-superio = "0.7.0"
vmm-sys-util = "0.11.1"
vm-device = "0.1.0"

virtio-blk = { git = "https://github.com/rust-vmm/vm-virtio.git", features = ["backend-stdio"] }
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio.git"}
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git"}

utils = { path = "../utils" }

[dev-dependencies]
vm-memory = { version = "0.10.0", features = ["backend-mmap"] }
kvm-bindings = "0.6.0"
