[package]
name = "devices"
version = "0.1.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
edition = "2018"
license = "Apache-2.0 OR BSD-3-Clause"

[dependencies]
event-manager = { version = "0.3.0", features = ["remote_endpoint"] }
kvm-ioctls = "0.13.0"
libc = "0.2.76"
linux-loader = "0.10.0"
log = "*"
vm-memory = "0.13.1"
vm-superio = "0.5.0"
vmm-sys-util = "0.11.2"
vm-device = "0.1.0"

virtio-blk = { git = "https://github.com/rust-vmm/vm-virtio.git", features = ["backend-stdio"] }
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio.git"}
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git"}

utils = { path = "../utils" }

[dev-dependencies]
vm-memory = { version = "0.13.1", features = ["backend-mmap"] }
kvm-bindings = "0.6.0"
