[package]
name = "vm-vcpu-ref"
version = "0.1.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
edition = "2018"
description = "Wrappers for setting up a VM for booting"
repository = "https://github.com/rust-vmm/vmm-reference"
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
keywords = ["virt", "kvm", "vm"]

[dependencies]
thiserror = "1.0.30"
kvm-ioctls = { version = "0.13.0" }
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
vm-memory = "0.10.0"
libc = "0.2.76"

[dev-dependencies]
vm-memory = { version = "0.10.0", features = ["backend-mmap"] }
vmm-sys-util = "0.11.1"
