[package]
name = "vm-vcpu"
version = "0.1.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.76"
kvm-bindings = { version = "0.4.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.8.0"
vm-memory = "0.6.0"
vmm-sys-util = "0.8.0"

utils = { path = "../utils" }
vm-vcpu-ref = { path = "../vm-vcpu-ref" }
arch = { path = "../arch" }

# vm-device is not yet published on crates.io.
# To make sure that breaking changes to vm-device are not breaking the
# vm-vcpu build, we're using a fixed revision.
vm-device = { git = "https://github.com/rust-vmm/vm-device", rev = "5847f12" }

[dev-dependencies]
vm-memory = { version = "0.6.0", features = ["backend-mmap"] }
