[package]
name = "vm-vcpu"
version = "0.1.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
libc = "0.2.76"
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.13.0"
vm-memory = "0.13.1"
vmm-sys-util = "0.11.2"
vm-device = "0.1.0"

utils = { path = "../utils" }
vm-vcpu-ref = { path = "../vm-vcpu-ref" }
arch = { path = "../arch" }

[dev-dependencies]
vm-memory = { version = "0.13.1", features = ["backend-mmap"] }
