[package]
name = "vmm"
version = "0.1.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
edition = "2018"

[dependencies]
event-manager = "0.2.0"
kvm-bindings = { version = "0.3.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.5.0"
libc = "0.2.76"
linux-loader = "0.2.0"
vm-memory = { version = "0.3.0", features = ["backend-mmap"] }
vm-superio = "0.1.1"
vmm-sys-util = "0.6.1"

vm-device = { git = "https://github.com/rust-vmm/vm-device.git" }
