[package]
name = "vmm"
version = "0.1.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
edition = "2018"

[dependencies]

event-manager = "0.2.1"
kvm-bindings = { version = "0.4.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.9.0"
libc = "0.2.91"
linux-loader = { version = "0.3.0", features = ["bzimage", "elf"] }
vm-memory = { version = "0.5.0", features = ["backend-mmap"] }
vm-superio = "0.1.1"
vmm-sys-util = "0.8.0"

# vm-device is not yet published on crates.io.
# To make sure that breaking changes to vm-device are not breaking the
# vm-vcpu build, we're using a fixed revision.
vm-device = { git = "https://github.com/rust-vmm/vm-device", rev = "5847f12" }

devices = { path = "../devices" }
vm-vcpu = { path = "../vm-vcpu" }
utils = { path = "../utils" }
